# libilbc-rfc3951

./: .gitignore  CMakeLists.txt  configure.ac
downloads/: Makefile.am  Makefile.in
src/: ilbcrfc3951.def
